# CrosSstrux_v4

./: .flake8  .gitignore  .pre-commit-config.yaml  CrossStrux_Edge.mq5  Dockerfile  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  bootstrap_real_data.py  bootstrap_test_data.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_training_pipeline.py
.github/workflows/: ci.yml  docker-build.yml  lint-format.yml  tests.yml
adapter/: decision_engine.py  response_builder.py  trade_builder.py
config/: api_keys.json.example  settings.py  symbol_map.json
core/: asset_profiles.py
core/features/: feature_pipeline.py  hierarchical_fusion.py  synthetic_volume.py
core/regimes/: regime_classifier.py  stability.py
core/structure/: balance.py  impulse.py  levels.py  sessions.py  volatility.py
dashboard/: drift_monitor.py
data_layer/: collector.py
edge_api/: server.py
inference/: engine.py  loader.py
mt5/: GoldDiggr.mq5  HashDiggr.mq5
mt5/Include/: AssetProfile.mqh  ContextRefreshManager.mqh  SpreadManager.mqh
tests/: __init__.py  test_collector.py  test_features.py  test_server.py  test_training.py
tools/: __init__.py  backtest_harness.py  ea_sim.py  export_quantconnect.py  golddiggr_client.py  sample_payload.json
training/: __init__.py  train.py
utils/: parquet_compat.py
