[project]
name = "crossstrux-golddiggr"
version = "3.1.0"
description = "CrosSstrux GoldDiggr - Production-grade XAUUSD regime & structure trading engine with FastAPI + MT5"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nkoroi-quant", email = "dev@nkoroi.com"}
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "pyarrow==17.0.0",
    "joblib==1.4.2",
    "MetaTrader5==5.0.45",
    "prometheus-client==0.20.0",
    "sentry-sdk==2.14.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "flake8==7.1.1",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
    "streamlit==1.38.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]