[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossstrux-golddiggr"
version = "4.1.0"
description = "CrosSstrux GoldDiggr - Production-grade XAUUSD regime & structure trading engine with FastAPI + MT5"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nkoroi", email = "nkoroi@structellect.co.ke"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyarrow>=17.0.0",
    "redis>=5.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "streamlit>=1.38.0",
]

# CRITICAL FIX: Explicitly declare all packages
[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "edge_api*",
    "features*",
    "adapter*",
    "config*",
    "dashboard*",
    "data_layer*",
    "inference*",
    "mt5*",
    "training*",
    "utils*",
    "tools*",
    "tests*",
]
exclude = ["data*", "models*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true